manifest/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-blue
spec:
  selector:
    matchLabels:
      app: myapp-blue
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp-blue
    spec:
      containers:
      - name: myapp
        image: skyhype/print:BlueBeastoftheleaf
        ports:
        - containerPort: 8080
