manifest/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-green
spec:
  selector:
    matchLabels:
      app: myapp-green
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp-green
    spec:
      containers:
      - name: myapp
        image: argoproj/rollouts-demo:blue
        ports:
        - containerPort: 8080
