manifest/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-blue
spec:
  selector:
    app: myapp-blue
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
