manifest/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-green
spec:
  selector:
    app: myapp-green
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
