manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp-green
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
