manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blue-green-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argo-bluegreen.com
    http:
      paths:
      - backend:
          serviceName: myapp-service
          servicePort: 80
